--- a/sistema_caja/src/app/tab2/tab2.page.html
+++ b/sistema_caja/src/app/tab2/tab2.page.html
@@ -19,7 +19,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="stacked">Empleado/Proveedor:</ion-label>
-      <ion-input type="text" formControlName="nombre" required></ion-input>
+      <ion-input type="text" formControlName="nombre"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="stacked">Monto:</ion-label>
