--- a/sistema_caja/src/app/tab1/tab1.page.html
+++ b/sistema_caja/src/app/tab1/tab1.page.html
@@ -36,7 +36,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="stacked">Cliente:</ion-label>
-      <ion-input type="text" formControlName="nombre" required></ion-input>
+      <ion-input type="text" formControlName="nombre"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="stacked">Monto:</ion-label>
