--- a/sistema_caja/src/app/tab3/tab3.page.html
+++ b/sistema_caja/src/app/tab3/tab3.page.html
@@ -33,18 +33,13 @@
     >
   </form>
   <ion-fab vertical="bottom" horizontal="end">
-    <ion-fab-button>
-      <ion-icon name="add"></ion-icon>
+    <ion-fab-button (click)="exportPdf()">
+      <ion-icon name="download-outline"></ion-icon>
     </ion-fab-button>
-    <ion-fab-list side="top">
-      <ion-fab-button color="light" (click)="exportPdf()">
-        <ion-icon name="download-outline"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
   </ion-fab>
   <div class="printable-content">
     <div class="printable-area" id="printable-area">
-      <h1>INGRESOS</h1>
+      <h2>INGRESOS</h2>
       <!--operaciones contado-->
       <div *ngIf="movimientosContado.length > 0">
         <h3>CONTADO</h3>
@@ -57,9 +52,9 @@
             <th width="35%">Observaciones</th>
           </tr>
           <tr *ngFor="let m of movimientosContado">
-            <td>{{m.fecha | date: 'dd/MM/yyyy hh:mm a'}}</td>
+            <td>{{m.fecha | date: 'dd/MM/yyyy'}}</td>
             <td>{{m.tipo}}</td>
-            <td>{{m.monto}}</td>
+            <td>{{m.monto | currency}}</td>
             <td>{{m.nombre}}</td>
             <td>{{m.observaciones}}</td>
           </tr>
@@ -67,13 +62,13 @@
         <table class="footer-table">
           <tr>
             <td width="80%">Total</td>
-            <td width="20%">{{montoContado}}</td>
+            <td width="20%">{{montoContado | currency}}</td>
           </tr>
         </table>
       </div>
       <!--operaciones debito-->
       <div *ngIf="movimientosDebito.length > 0">
-        <h2>TARJETA DEBITO</h2>
+        <h3>TARJETA DEBITO</h3>
         <table class="detail-table">
           <tr>
             <th width="15%">Fecha</th>
@@ -83,9 +78,9 @@
             <th width="35%">Observaciones</th>
           </tr>
           <tr *ngFor="let m of movimientosDebito">
-            <td>{{m.fecha | date: 'dd/MM/yyyy hh:mm a'}}</td>
+            <td>{{m.fecha | date: 'dd/MM/yyyy'}}</td>
             <td>{{m.tipo}}</td>
-            <td>{{m.monto}}</td>
+            <td>{{m.monto | currency}}</td>
             <td>{{m.nombre}}</td>
             <td>{{m.observaciones}}</td>
           </tr>
@@ -93,13 +88,13 @@
         <table class="footer-table">
           <tr>
             <td width="80%">Total:</td>
-            <td width="20%">{{montoDebito}}</td>
+            <td width="20%">{{montoDebito | currency}}</td>
           </tr>
         </table>
       </div>
       <!--operaciones credito-->
       <div *ngIf="movimientosCredito.length > 0">
-        <h2>TARJETA CREDITO</h2>
+        <h3>TARJETA CREDITO</h3>
         <table class="detail-table">
           <tr>
             <th width="15%">Fecha</th>
@@ -109,9 +104,9 @@
             <th width="35%">Observaciones</th>
           </tr>
           <tr *ngFor="let m of movimientosCredito">
-            <td>{{m.fecha | date: 'dd/MM/yyyy hh:mm a'}}</td>
+            <td>{{m.fecha | date: 'dd/MM/yyyy'}}</td>
             <td>{{m.tipo}}</td>
-            <td>{{m.monto}}</td>
+            <td>{{m.monto | currency}}</td>
             <td>{{m.nombre}}</td>
             <td>{{m.observaciones}}</td>
           </tr>
@@ -119,14 +114,14 @@
         <table class="footer-table">
           <tr>
             <td width="80%">Total:</td>
-            <td width="20%">{{montoCredito}}</td>
+            <td width="20%">{{montoCredito | currency}}</td>
           </tr>
           <tr></tr>
         </table>
       </div>
       <!--operaciones Cheque-->
       <div *ngIf="movimientosCheque.length > 0">
-        <h2>CHEQUES</h2>
+        <h3>CHEQUES</h3>
         <table class="detail-table">
           <tr>
             <th width="15%">Fecha</th>
@@ -136,9 +131,9 @@
             <th width="35%">Observaciones</th>
           </tr>
           <tr *ngFor="let m of movimientosCheque">
-            <td>{{m.fecha | date: 'dd/MM/yyyy hh:mm a'}}</td>
+            <td>{{m.fecha | date: 'dd/MM/yyyy'}}</td>
             <td>{{m.tipo}}</td>
-            <td>{{m.monto}}</td>
+            <td>{{m.monto | currency}}</td>
             <td>{{m.nombre}}</td>
             <td>{{m.observaciones}}</td>
           </tr>
@@ -146,13 +141,13 @@
         <table class="footer-table">
           <tr>
             <td width="80%">Total:</td>
-            <td width="20%">{{montoCheque}}</td>
+            <td width="20%">{{montoCheque | currency}}</td>
           </tr>
         </table>
       </div>
       <!--operaciones cuenta corriente-->
       <div *ngIf="movimientosCuenta.length > 0">
-        <h2>CUENTA CORRIENTE</h2>
+        <h3>CUENTA CORRIENTE</h3>
         <table class="detail-table">
           <tr>
             <th width="15%">Fecha</th>
@@ -162,9 +157,9 @@
             <th width="35%">Observaciones</th>
           </tr>
           <tr *ngFor="let m of movimientosCuenta">
-            <td>{{m.fecha | date: 'dd/MM/yyyy hh:mm a'}}</td>
+            <td>{{m.fecha | date: 'dd/MM/yyyy'}}</td>
             <td>{{m.tipo}}</td>
-            <td>{{m.monto}}</td>
+            <td>{{m.monto | currency}}</td>
             <td>{{m.nombre}}</td>
             <td>{{m.observaciones}}</td>
           </tr>
@@ -172,11 +167,11 @@
         <table class="footer-table">
           <tr>
             <td width="80%">Total:</td>
-            <td width="20%">{{montoCuenta}}</td>
+            <td width="20%">{{montoCuenta | currency}}</td>
           </tr>
         </table>
       </div>
-      <h1>EGRESOS</h1>
+      <h2>EGRESOS</h2>
       <table class="detail-table" *ngIf="movimientosEgresos.length > 0">
         <tr>
           <th width="15%">Fecha</th>
@@ -186,25 +181,18 @@
           <th width="35%">Observaciones</th>
         </tr>
         <tr *ngFor="let m of movimientosEgresos">
-          <td>{{m.fecha | date: 'dd/MM/yyyy hh:mm a'}}</td>
+          <td>{{m.fecha | date: 'dd/MM/yyyy'}}</td>
           <td>{{m.tipo}}</td>
-          <td>{{m.monto}}</td>
+          <td>{{m.monto | currency}}</td>
           <td>{{m.nombre}}</td>
           <td>{{m.observaciones}}</td>
         </tr>
       </table>
       <table class="footer-table">
         <tr>
-          <td width="80%">Total Egresos:</td>
-          <td width="20%">{{montoEgresos}}</td>
-        </tr>
-        <tr>
-          <td width="80%">Total Ingresos:</td>
-          <td width="20%">{{montoIngresos}}</td>
-        </tr>
-        <tr>
-          <td width="80%">Diferencia:</td>
-          <td width="20%">{{montoIngresos - montoEgresos}}</td>
+          <td width="33%">Egresos: {{montoEgresos | currency}}</td>
+          <td width="33%">Ingresos: {{montoIngresos | currency}}</td>
+          <td width="33%">Diferencia: {{montoIngresos - montoEgresos | currency}}</td>
         </tr>
       </table>
     </div>
